improve logic and design

--- a/src/index.css
+++ b/src/index.css
@@ -17,10 +17,11 @@ body {
 }
 
 #app {
+  display: flex;
+  flex-direction: column;
   height: 100%;
-  text-align: center;
   font-size: 1.5em;
-  padding-top: 100px;
+  padding: 2vw 2vw;
 }
 
 .link {
